# agentic-browser

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  plan-kuchatur.md  pyproject.toml  requirements.txt  run.py  start-prompt.txt
docs/: addmermaid.js  design.md  implementaiton_plan.md  implementation_plan.md  requirements.md
scripts/: benchmark_cases.example.json  check_azure_foundry_connection.py  run_intelligence_benchmarks.py
src/agentic_browser/: config.py  main.py
src/agentic_browser/agent/: __init__.py  graph.py  planner.py  state.py
src/agentic_browser/agent/nodes/: __init__.py  extract.py  fetch.py  search.py  synthesize.py
src/agentic_browser/intelligence/: __init__.py  benchmarks.py  interfaces.py  planner.py  synthesizer.py
src/agentic_browser/models/: agent.py  page.py  search.py
src/agentic_browser/navigation/: __init__.py  store.py
src/agentic_browser/rendering/: __init__.py  html.py
src/agentic_browser/routes/: __init__.py  agent.py  search.py
src/agentic_browser/services/: llm.py  search.py
tests/: test_agent_graph.py  test_agent_planner.py  test_health.py  test_page_models.py  test_planner.py  test_rendering.py  test_search.py  test_synthesis.py
